git提交忽略idea文件

--- a/workspaceidea/dome-xml/.gitignore
+++ b/workspaceidea/dome-xml/.gitignore
@@ -27,3 +27,21 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+# 忽略所有的 .idea 文件夹
+.idea/
+
+# 忽略 .iml 文件
+*.iml
+
+# 忽略 .ipr 文件
+*.ipr
+
+# 忽略 .iws 文件
+*.iws
+
+# 忽略 .xml 文件
+*.xml
+
+# 忽略 .log 文件
+*.log
