--- a/workspaceidea/web-all/demo05-filter/web/WEB-INF/web.xml
+++ b/workspaceidea/web-all/demo05-filter/web/WEB-INF/web.xml
@@ -12,4 +12,19 @@
         <filter-name>loggingFilter</filter-name>
         <servlet-name>servlet1</servlet-name>
     </filter-mapping>
+
+    <filter>
+        <filter-name>lifeCycleFilter</filter-name>
+        <filter-class>com.fyd.filters.LifeCycleFilter</filter-class>
+        <init-param>
+            <param-name>dateTimePattern</param-name>
+            <param-value>yyyy-MM-dd HH:mm:ss</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>lifeCycleFilter</filter-name>
+        <servlet-name>servlet1</servlet-name>
+    </filter-mapping>
+
+
 </web-app>
