--- a/workspaceidea/web-all/demo05-filter/web/WEB-INF/web.xml
+++ b/workspaceidea/web-all/demo05-filter/web/WEB-INF/web.xml
@@ -4,6 +4,7 @@
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
          version="6.0">
 
+<!--
     <filter>
         <filter-name>loggingFilter</filter-name>
         <filter-class>com.fyd.filters.LoggingFilter</filter-class>
@@ -25,6 +26,34 @@
         <filter-name>lifeCycleFilter</filter-name>
         <servlet-name>servlet1</servlet-name>
     </filter-mapping>
+-->
 
+    <!--配置多个过滤器-->
+<!--    <filter>
+        <filter-name>filter1</filter-name>
+        <filter-class>com.fyd.filters.Filter1</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>filter1</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>filter2</filter-name>
+        <filter-class>com.fyd.filters.Filter2</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>filter2</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>filter3</filter-name>
+        <filter-class>com.fyd.filters.Filter3</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>filter3</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>-->
 
 </web-app>
